--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -235,7 +235,7 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, T, togglesplit, # dwindle
 
@@ -243,6 +243,8 @@ bind = $mainMod, F, fullscreen, 1
 bind = $mainMod SHIFT, F, fullscreen, 0
 
 bind = $mainMod, B, exec, firefox
+
+bind = $mainMod, R, exec, pkill waybar && hyprctl dispatch exec waybar
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
