Added two wallpapers and created refresh.sh script

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,10 +1,7 @@
-preload = /home/hampus/.config/hypr/wallpaper.png
+preload = /home/hampus/.config/hypr/wallpapers/wall0.jpg
+wallpaper = eDP-1,/home/hampus/.config/hypr/wallpapers/wall0.jpg
 
-#set the default wallpaper(s) seen on initial workspace(s) --depending on the number of monitors used
-wallpaper = eDP-1,/home/hampus/.config/hypr/wallpaper.png
+# disable splash text rendering over the wallpaper
+splash = false
 
-#enable splash text rendering over the wallpaper
-splash = true
-
-#fully disable ipc
 # ipc = off
