--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -244,7 +244,7 @@ bind = $mainMod SHIFT, F, fullscreen, 0
 
 bind = $mainMod, B, exec, firefox
 
-bind = $mainMod, R, exec, pkill waybar && hyprctl dispatch exec waybar
+bind = $mainMod, R, exec, ~/.config/hypr/refresh.sh
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
