--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -244,7 +244,8 @@ bind = $mainMod SHIFT, F, fullscreen, 0
 
 bind = $mainMod, B, exec, firefox
 
-bind = $mainMod, R, exec, ~/.config/hypr/refresh.sh
+bind = $mainMod, R, exec, ~/.config/hypr/reload.sh
+bind = $mainMod, I, exec, ~/.config/hypr/random_wall.sh
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
